Multiple choice (popup and radio buttons) support

--- a/script/Makefile
+++ b/script/Makefile
@@ -152,3 +152,14 @@ templates:
 	xsltproc --stringparam toc.level 0 $(MBUSR)/webwork-latex.xsl $(WWMBX)/examples/webwork-templates/webwork-templates.xml; \
 	xelatex webwork-templates.tex; \
 	xelatex webwork-templates.tex
+	#
+	install -d $(HTMLOUT) $(MBUSR)
+	-rm $(HTMLOUT)/*.html
+	cp $(WWXSL)/webwork-pg.xsl $(WWXSL)/webwork-html.xsl $(MBUSR)
+	cp -a $(WWMBX)/examples/webwork-templates/images $(HTMLOUT)
+	# xslt_base64: https://github.com/ilyakharlamov/xslt_base64
+	# recursion on entire problem content, up limits on  xsltproc
+	cp $(WWXSL)/xslt_base64/base64.xsl $(MBUSR)
+	cp $(WWXSL)/xslt_base64/base64_binarydatamap.xml $(MBUSR)
+	cd $(HTMLOUT); \
+	xsltproc --maxdepth 12000 --stringparam html.knowl.exercise.inline no $(MBUSR)/webwork-html.xsl $(WWMBX)/examples/webwork-templates/webwork-templates.xml
